--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/util.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/single-product.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/star.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
 </head>
 
 <body>
@@ -137,9 +138,11 @@
                                 <div class="product_text">
                                     <p th:text="${product.getShortDesc()}"></p>
                                 </div>
+
+                                <!-- Buttons -->
                                 <div class="product_buttons">
                                     <div class="text-right d-flex flex-row align-items-start justify-content-start">
-                                        <div title="Add to wish list"
+                                        <div title="Add to wish list" id="add_wish_list"
                                              class="product_button product_fav text-center d-flex flex-column align-items-center justify-content-center">
                                             <div>
                                                 <div><img th:src="@{/static/images/heart_2.svg}" class="svg" alt="">
@@ -147,7 +150,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div title="Add to shopping cart"
+                                        <div title="Add to shopping cart" id="add_cart"
                                              class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
                                             <div>
                                                 <div><img th:src="@{/static/images/cart.svg}" class="svg" alt="">
@@ -155,7 +158,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div title="Add reminder"
+                                        <div title="Add reminder" id="add_notif"
                                              class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
                                             <div>
                                                 <div><img th:src="@{/static/images/notification.svg}" class="svg"
@@ -166,6 +169,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -979,26 +983,127 @@
             <footer class="footer" th:insert="fragments/footer.html"></footer>
         </div>
     </div>
+</div>
 
-    <script th:src="@{/static/js/jquery-3.2.1.min.js}"></script>
-    <script th:src="@{/static/styles/bootstrap-4.1.2/popper.js}"></script>
-    <script th:src="@{/static/styles/bootstrap-4.1.2/bootstrap.min.js}"></script>
-    <script th:src="@{/static/js/plugins.js}"></script>
-    <script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
-    <script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
-    <script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
-    <script th:src="@{/static/plugins/greensock/animation.gsap.min.js}"></script>
-    <script th:src="@{/static/plugins/greensock/ScrollToPlugin.min.js}"></script>
-    <script th:src="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
-    <script th:src="@{/static/plugins/easing/easing.js}"></script>
-    <script th:src="@{/static/plugins/progressbar/progressbar.min.js}"></script>
-    <script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
-    <script th:src="@{/static/plugins/flexslider/jquery.flexslider-min.js}"></script>
-    <script th:src="@{/static/js/classy-nav.min.js}"></script>
-    <script th:src="@{/static/js/product.js}"></script>
-    <script th:src="@{/static/js/active.js}"></script>
-    <script th:src="@{/static/js/input-mask.js}"></script>
-    <script th:src="@{/static/js/jquery.mask.js}"></script>
-    <script th:src="@{/static/js/iziToast.min.js}"></script>
+<script th:src="@{/static/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/static/styles/bootstrap-4.1.2/popper.js}"></script>
+<script th:src="@{/static/styles/bootstrap-4.1.2/bootstrap.min.js}"></script>
+<script th:src="@{/static/js/plugins.js}"></script>
+<script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
+<script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/animation.gsap.min.js}"></script>
+<script th:src="@{/static/plugins/greensock/ScrollToPlugin.min.js}"></script>
+<script th:src="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
+<script th:src="@{/static/plugins/easing/easing.js}"></script>
+<script th:src="@{/static/plugins/progressbar/progressbar.min.js}"></script>
+<script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
+<script th:src="@{/static/plugins/flexslider/jquery.flexslider-min.js}"></script>
+<script th:src="@{/static/js/classy-nav.min.js}"></script>
+<script th:src="@{/static/js/product.js}"></script>
+<script th:src="@{/static/js/active.js}"></script>
+<script th:src="@{/static/js/input-mask.js}"></script>
+<script th:src="@{/static/js/jquery.mask.js}"></script>
+<script th:src="@{/static/js/iziToast.min.js}"></script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var productID = /*[[${product.getProductId()}]]*/ 'default';
+    var productName = /*[[${product.getProductName()}]]*/ 'default';
+
+    $('#add_wish_list').click(function (event) {
+
+        var ret = {
+            type: "wish-list",
+            id: productID
+        };
+
+        event.preventDefault();
+        $.post("/product/" + productID, ret, function (data) {
+            iziToast.show({
+                title: 'Success',
+                message: productName + ' added to wish list successfully.',
+                position: 'topRight',
+                color: 'green'
+            });
+
+        }).fail(function (data) {
+
+            if (data.responseText === "") {
+                window.location.href = "/login";
+            } else {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            }
+        })
+    });
+
+    $('#add_cart').click(function (event) {
+
+        var ret = {
+            type: "cart",
+            id: productID
+        };
+
+        event.preventDefault();
+        $.post("/product/" + productID, ret, function (data) {
+            iziToast.show({
+                title: 'Success',
+                message: productName + ' added to shopping cart successfully.',
+                position: 'topRight',
+                color: 'green'
+            });
+
+        }).fail(function (data) {
+
+            if (data.responseText === "") {
+                window.location.href = "/login";
+            } else {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            }
+        })
+    });
+
+    $('#add_reminder').click(function (event) {
+        <!-- TODO -->
+        var ret = {
+            type: "reminder",
+            id: productID
+        };
+
+        event.preventDefault();
+        $.post("/product/" + productID, ret, function (data) {
+            iziToast.show({
+                title: 'Success',
+                message: 'Reminder added for ' + productName + ' successfully.',
+                position: 'topRight',
+                color: 'green'
+            });
+
+        }).fail(function (data) {
+
+            if (data.responseText === "") {
+                window.location.href = "/login";
+            } else {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            }
+        })
+    });
+    /*]]>*/
+</script>
+
 </body>
 </html>
