User details search html updated

--- a/src/main/resources/templates/user_details/_search.html
+++ b/src/main/resources/templates/user_details/_search.html
@@ -8,11 +8,11 @@
         <div class="isotope_sorting_text"><span>Sort</span><i
                 class="fa fa-caret-down" aria-hidden="true"></i></div>
         <ul style="text-align: start">
-            <li class="item_sorting_btn"
+            <li class="item_sorting_btn" id="date"
                 data-isotope-option='{ "sortBy": "original-order" }'>Date
             </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "search-value" }'>Search Value</li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "total-search" }'>Total Search</li>
+            <li class="item_sorting_btn" id="searchValue" data-isotope-option='{ "sortBy": "search-value" }'>Search Value</li>
+            <li class="item_sorting_btn" id="totalSearch" data-isotope-option='{ "sortBy": "total-search" }'>Total Search</li>
         </ul>
     </div>
 </div>
@@ -47,4 +47,6 @@
         </div>
     </div>
 </div>
+
+
 </html>
