--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -58,7 +58,7 @@
             <div class="container">
                 <ul class="nav nav-tabs justify-content-center" id="siteTab">
                     <li class="nav-item">
-                        <a class="nav-link active profile-navbar-text" data-url="/admin-panel/user"
+                        <a class="nav-link active profile-navbar-text" th:attr="data-url=@{/admin-panel/user(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
                            th:href="@{#user}">Users</a>
                     </li>
 
