There is no users warning message added to admin panel user after pagination

--- a/src/main/resources/templates/admin_panel/_user.html
+++ b/src/main/resources/templates/admin_panel/_user.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<span th:if="${userPage.totalPages > 0}">
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
         <div class="isotope_sorting_text"><span>Sort</span><i
@@ -100,9 +100,12 @@
     </div>
 </div>
 
+</span>
 
 <!-- No user -->
-
+<span th:unless="${userPage.totalPages >0}">
+<div class="warning-text">There are no users.</div>
+</span>
 
 
 </html>
